--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <link rel="stylesheet" href="css/layouts/blog-old-ie.css">
         <![endif]-->
         <!--[if gt IE 8]><!-->
-            <link rel="stylesheet" href="css/layouts/blog.css">
+            <link rel="stylesheet" href="http://akara.photography/assets/css/style.scss">
         <!--<![endif]-->
 </head>
 <body>
